@@ -1,6 +1,8 @@
 git-annex (0.15) UNRELEASED; urgency=low
 
   * Support scp-style urls for remotes (host:path).
+  * Add trust and untrust subcommands, to allow configuring remotes
+    that are trusted to retain files without explicit checking.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 28 Dec 2010 13:13:20 -0400
 
